--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,5 +1,14 @@
 <html>
   <body>
     <h1><%= title%></h1>
+    <ul>
+      <% for (let i = 0; i < messages.length; i++) { %>
+      <li>
+        <h2><%= messages[i].text %></h2>
+        <p>From <%= messages[i].user %></p>
+        <p>Added on <%= messages[i].added %></p>
+      </li>
+      <% } %>
+    </ul>
   </body>
 </html>
