--- a/views/form.ejs
+++ b/views/form.ejs
@@ -1,1 +1,7 @@
-<form method="POST" action="/new">put your inputs and buttons in here!</form>
+<form method="POST" action="/new">
+  <label for="author">From</label>
+  <input type="text" name="author" />
+  <label for="message">Message</label>
+  <input type="text" name="message" />
+  <button type="submit">Submit</button>
+</form>
