--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,7 @@
 <html>
   <body>
     <h1><%= title%></h1>
+    <a href="/new">Add your own message</a>
     <ul>
       <% for (let i = 0; i < messages.length; i++) { %>
       <li>
